--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "~52.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-native": "0.76.1",
+    "react-native-vector-icons": "^10.2.0",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
